style.css
* {
  box-sizing: border-box;	
}

html {
  font-size: 10px;
  font-family: verdana, sans-serif; /*font tbd*/
}

body {
  display: flex;
  flex-direction: column;
  margin: 0;
  background-color: #C5C5C5; /*color tbd*/
  width: 100%;
  padding: 10px;
}

#intro {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.opening-statement {
	width: 100%;
	background-color: red; /*background color tbd*/
	padding-left: 10px;
}

.intro-container{
	/*width: 200px;*/
	background-color: green; /*color tbd*/
	padding: 10px;
}

#profile-pic{
	display: block;
	width: 100%;
	max-width: 250px;
	margin-left: auto;
	margin-right: auto;
	height: auto;
}

.link-container {
	display: flex;
	flex-direction: row;
	justify-content: space-around;
	margin-top: 10px;
	margin-left: auto;
	margin-right: auto;
	border: solid 2px purple; /*added to help visulise image border*/
	font-size: 0.7rem;
}

#about-me{
  border: solid 2px black; /*added to help visulise section border*/	
  padding: 10px;
  background-color: blue; /*color tbd*/
}

#about-me h2 {
  font-size: 2rem;
}

.about-me-card {
  background-color: yellow; /*color tbd*/
  max-width: 500px;
}

.about-me-card-heading {
  padding-top: 10px;
  padding-left: 5px;
  font-size: 1.5rem;
}

.card-prose-container {
  background-color: red; /*color tbd*/
  padding: 10px;
}

.card-prose-container p {
  font-size: 1.5rem;
}

#portfolio {
	
}

#contact {
	
}

@media screen and (min-width:300px) {
	.link-container {
		font-size: 1rem;
	}

@media screen and (min-width:600px) {
  #intro {
    flex-direction: row;		
  }
  
  .opening-statement {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	justify-content: center;
	font-size: 2rem;
	padding-left: 15px;
  }
  
  #profile-pic {
	max-width: 350px;
  }
  
  .link-container {
	font-size: 1.5rem;
  }
  
  .intro-container {
	position: sticky;
	top: 0;
	right: 0;
  }

  .about-me-card {
	margin-left: auto;
	margin-right: auto;
  }

